Add support for decimal numbers without integer part

Add parsing support for numbers without explicit integer part, this
allows inputs of the form "[.,]d+", some examples are".1", ".5e10"
and ".5+.5".

BUG: 487659